--- a/src/app/components/invoice-detail-tab/invoice-detail-tab.component.html
+++ b/src/app/components/invoice-detail-tab/invoice-detail-tab.component.html
@@ -2,8 +2,8 @@
     <table mat-table [dataSource]="invoiceDetailsDataSource">
         <ng-container matColumnDef="statuIcon">
             <th mat-header-cell *matHeaderCellDef>#</th>
-            <td mat-cell *matCellDef="let element"><mat-icon *ngIf="element.statuIcon" style="color: red;">cancel</mat-icon>
-                                                   <mat-icon *ngIf="!element.statuIcon"
+            <td mat-cell *matCellDef="let element"><mat-icon *ngIf="!element.statuIcon" style="color: red;">cancel</mat-icon>
+                                                   <mat-icon *ngIf="element.statuIcon"
                                                    style="color: white;
                                                    background: green;
                                                    border-radius: 50%;">check</mat-icon>
