--- a/src/app/components/maw-sidenav/maw-sidenav.component.html
+++ b/src/app/components/maw-sidenav/maw-sidenav.component.html
@@ -24,7 +24,7 @@
  -->
       <div class="menu-item" fxLayout="row" fxLayoutAlign="space-evenly none">
         <!--Repeating content for Menu Item-->
-        Shahul Sajjad
+        {{userDetails.ud_user_name[0]}}
         <div class="dropdown-content" style="left:0;">
           <a mat-button [routerLink]="'/userProfile'">Profile</a>
           <a mat-button [routerLink]="">Log Out</a>
